[package]
name = "cargo-quality"
version = "0.1.0"
edition = "2021"
authors = ["surechen <chenshuo17@huawei.com>"]
repository = "https://github.com/open-rust-initiative/lathes/tree/main/cargo-quality"
license = "MIT OR Apache-2.0"
keywords = ["quality evaluate"]
description = "Used to evaluate the quality of Rust project."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-quality"
path = "src/cargo-quality/main.rs"

[dependencies]
structopt = "^0.3.26"
clap = { version = "^3.2.8", features = ["derive", "env"] }

globset = "^0.4"
regex = "^1.5"
serde = {version = "^1.0", feature = ["detive"]}
serde_cbor = "^0.11"
serde_json = "^1.0"
serde_yaml = "^0.8"
toml = "^0.5"
serde_derive = "^1.0"
simple_logger = "2.3.0"
log = "^0.4"
anyhow = "^1.0.59"
glob = "^0.3.0"
lazy_static = "^1.4.0"

rust-code-analysis = { git = "https://github.com/mozilla/rust-code-analysis", rev = "c7e1fb4"}
#rust-code-analysis = { path = "./external_tools/rust-code-analysis", version = "0.0"}

cargo-deny = "^0.12.2"
rayon = "^1.5.3"
krates = { version = "0.11", features = ["targets"] }
cargo = { version = "0.63" }
walkdir = "^2.3.2"
